# university

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  makefile  pyproject.toml
src/: main.py
src/auth/domain/entities/: user.py
src/auth/service_layer/: unit_of_work.py
src/backbone/: configs.py
src/backbone/adapters/: abstract_sqlalchemy_repository.py  dependencies.py  postgres.py
src/backbone/domain/: abstract_entity.py  abstract_face_verifier.py  abstract_file_service.py  abstract_repository.py  abstract_unit_of_work.py  enums.py
src/backbone/service_layer/: dtos.py  message_bus.py  utils.py
src/shared/adapters/: mappers.py  minio_client.py
src/shared/adapters/data_models/: file_data_model.py
src/shared/adapters/repositories/: file_repositories.py
src/shared/domain/: abstract_s3_client.py
src/shared/domain/entities/: file.py
src/shared/entrypoints/: routes.py
src/shared/service_layer/: file_service.py  unit_of_work.py
src/university/: bootstrap.py
src/university/adapters/: mappers.py
src/university/adapters/data_models/: course_data_model.py
src/university/adapters/repositories/: course_repository.py
src/university/domain/: commands.py  enums.py  events.py
src/university/domain/entities/: classroom.py  course.py  course_time.py  student.py  teacher.py  university.py
src/university/entrypoints/: request_models.py  routes.py
src/university/service_layer/: unit_of_work.py
src/university/service_layer/event_handlers/: __init__.py  (+1 more)
src/zverifier/service_layer/: face_verifier_service.py  unit_of_work.py
(+4 files in other folders)
