[tool.poetry]
name = "university"
version = "0.1.0"
description = ""
authors = ["mohsen padidar <mxpadidar@gmail.com>"]
readme = "README.md"
packages = [{ include = "university", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.28"
psycopg = "^3.1.18"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
minio = "^7.2.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/'
